<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".StepDetailsFragment"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp">


    <TextView
        android:id="@+id/tv_step_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="22sp"
        android:textColor="@color/colorTextPrimary"
        android:textStyle="bold"
        android:paddingBottom="16dp"/>

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/media_player"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:paddingBottom="16dp" />

    <TextView
        android:id="@+id/tv_step_full_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorTextSecondary"
        android:paddingBottom="18dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom">

        <Button
            android:id="@+id/btn_previous"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"/>

    </LinearLayout>

</LinearLayout>
