...
            android:layout_marginBottom="16dp"
            android:text="@string/tv_steps_label"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp" />

        <ListView
            android:id="@+id/lv_steps"
            android:layout_width="match_parent"
            android:layout_height="@dimen/steps_height"
            android:layout_marginBottom="16dp" />
    </LinearLayout>

</ScrollView>
